--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "truffle": "^4.1.8",
     "zeppelin-solidity": "^1.9.0"
   }
 }
