--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "truffle": "^4.1.8",
+    "truffle-hdwallet-provider": "0.0.5",
     "zeppelin-solidity": "^1.9.0"
   }
 }
